# dns-rs

./: Cargo.toml  Dockerfile  config.yaml  init.sh
.github/workflow/: build.yaml
.github/workflows/: build.yaml
src/: main.rs  model.rs
