[package]
name = "dns-rs"
version = "0.1.0"
edition = "2021"
[dependencies]
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
trust-dns-proto = "0.22"
tokio = { version = "1", features = ["full"] }

serde_json = "1.0.134"
serde = {version = "1.0.216",features = ["derive"]}
futures = "0.3.31"
serde_yaml = "0.9.34"
dashmap ={version = "6.1.0",features = ["serde"]}

once_cell = "1.20.2"

chrono = "0.4.39"


[env]
RING_NO_ASM = "1"